terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  access_key = var.aws_cred.access_key
  secret_key = var.aws_cred.secreatkey
  region     = var.aws_cred.region
}

resource "aws_instance" "jenkinsserver" {
  ami           = var.instanceinfo.ami
  instance_type = var.instanceinfo.instancetype
  key_name      = "jenkins-key"
  root_block_device {
    volume_size = var.instanceinfo.disksize
    volume_type = var.instanceinfo.disktype
  }
  security_groups = [aws_security_group.jenkinssg.name]
  depends_on      = [aws_security_group.jenkinssg]
  tags            = var.instanceinfo.tags
}

resource "aws_security_group" "jenkinssg" {
  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "https"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "sonarqube"
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "app"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "jenkins sg"
  }
}
